dolly-llm/k8s/dolly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolly
  labels:
    app: dolly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dolly
  template:
    metadata:
      labels:
        app: dolly
    spec:
      containers:
      - name: dolly
        image: quay.io/mdargatz/dollyv2:3b
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/app-root/src/src"
          name:  dolly
      volumes:
      - name:  dolly
        persistentVolumeClaim:
          claimName: dolly
