dolly-llm/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dolly
  labels:
    app: dolly
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP
  selector:
    app: dolly
