dolly-llm/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dollyv2
  labels:
    app: dolly
spec:
  host: dollyv2-gotmining-serverless.apps.science-cluster.sandbox2009.opentlc.com
  to:
    kind: Service
    name: dolly
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        dollyv2-gotmining-serverless.apps.science-cluster.sandbox2009.opentlc.com
